python/testData/highlighting/multipleEscapedBackslashes.py
S1 = 'This literal contains even number of backslashes\\\\\\'
S2 = <error descr="Missing closing quote [']">'This literal contains odd number of backslashes\\\\\\\'</error>